--- a/java/src/main/resources/templates/fragments/footer.html
+++ b/java/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
 <body>
     <div th:fragment="footerFragment">
         <!-- フッターの内容 -->
-        <footer class="navbar bg-body-tertiary">
+        <footer class="mt-3 navbar bg-body-tertiary">
 			<div class="container-fluid justify-content-center">
 				&COPY; 2024 admin@framework-cat.jp
 			</div>
