[feat]削除機能の追加

--- a/java/src/main/resources/templates/views/top.html
+++ b/java/src/main/resources/templates/views/top.html
@@ -28,7 +28,7 @@
                     <td th:text="*{getDueDay()}"></td>
 					<td>
 						<div class="d-flex justify-content-around">
-							<a class="btn btn-info btn-sm" th:href="@{/tasks/edit/{id}(id=*{id})}">編集・削除</a>
+							<a class="btn btn-info btn-sm" th:href="@{/detail/{id}(id=*{id})}">詳細ページへ</a>
 						</div>
 					</td>
 				</tr>
